<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".view.detail.DetailMovieActivity">

    <ImageButton
        android:id="@+id/btn_play"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rouded_button"
        android:src="@drawable/ic_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        tools:ignore="ContentDescription,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/image_poster"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription,ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <TextView
        android:id="@+id/text_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:text="@string/text_2019"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/text_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/text_name"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_movie_name"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/text_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/text_b_phim_xoay_quanh_cu_c_s_ng_c_a_ling_m_t_gi_o_vi_n_tr_ng_h_c_ph_i_i_m_t_v_i_t_nh_tr_ng_v_sinh_trong_khi_ph_i_ch_m_s_c_ng_i_cha_ch_ng_m_y_u_c_a_m_nh_nh_m_t_trong_nh_ng_h_c_sinh_c_a_ling_kok_wei_lun_ph_i_l_ng_c_trong_c_c_l_p_h_c_ti_ng_trung_b_sung_hai_ng_i_tr_n_n_th_n_thi_t_h_n_khi_wei_lun_ch_p_nh_n_s_k_m_c_p_th_m_c_a_ling"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btn_play"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_play"
        app:layout_constraintTop_toBottomOf="@+id/btn_play"
        tools:ignore="TextSizeCheck,VisualLintLongText" />

    <TextView
        android:id="@+id/text_quality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/text_test_FHD"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/text_year"
        app:layout_constraintStart_toEndOf="@+id/text_year"
        app:layout_constraintTop_toTopOf="@+id/text_year" />

    <TextView
        android:id="@+id/text_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/text_vietsub"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/text_time"
        app:layout_constraintStart_toEndOf="@+id/text_time"
        app:layout_constraintTop_toTopOf="@+id/text_time"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/text_90min"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/text_quality"
        app:layout_constraintStart_toEndOf="@+id/text_quality"
        app:layout_constraintTop_toTopOf="@+id/text_quality"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progress_bar_text"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/text_content"
        app:layout_constraintEnd_toEndOf="@+id/text_content"
        app:layout_constraintStart_toStartOf="@+id/text_content"
        app:layout_constraintTop_toTopOf="@+id/text_content" />

    <ProgressBar
        android:id="@+id/progress_bar_image"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/image_poster"
        app:layout_constraintEnd_toEndOf="@+id/image_poster"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/image_poster"
        app:layout_constraintTop_toTopOf="@+id/image_poster"
        app:layout_constraintVertical_bias="0.518" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_series"
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:background="@color/gray"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        tools:listitem="@layout/item_series_movie" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DisableBaselineAlignment,TextSizeCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/gray"
                android:src="@drawable/ic_star"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck">

            </ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_favorite"
                android:textColor="@color/white">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/gray"
                app:srcCompat="@drawable/ic_share"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_share"
                android:textColor="@color/white">

            </TextView>
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="567dp" />


</androidx.constraintlayout.widget.ConstraintLayout>